fix(button-icon): fix alignment

--- a/src/button/button.css
+++ b/src/button/button.css
@@ -43,6 +43,7 @@
 
     &__icon {
         padding-right: 10px;
+        line-height: 1;
     }
 
     &_width_available {
